tests/baselines/reference/structConstructorParameterShadowsOuterScopes.errors.txt
tests/cases/conformance/structs/structPropertyMemberDeclarations/structMemberVariableDeclarations/structConstructorParameterShadowsOuterScopes.ts(11,9): error TS2301: Initializer of instance member variable 'b' cannot reference identifier 'x' declared in the constructor.
tests/cases/conformance/structs/structPropertyMemberDeclarations/structMemberVariableDeclarations/structConstructorParameterShadowsOuterScopes.ts(13,9): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/structs/structPropertyMemberDeclarations/structMemberVariableDeclarations/structConstructorParameterShadowsOuterScopes.ts(19,9): error TS2301: Initializer of instance member variable 'b' cannot reference identifier 'y' declared in the constructor.


==== tests/cases/conformance/structs/structPropertyMemberDeclarations/structMemberVariableDeclarations/structConstructorParameterShadowsOuterScopes.ts (3 errors) ====
    // doc 4.1
    // Initializer expressions for instance member variables are evaluated in the scope of the struct
    // constructor body, but are not permitted to reference parameters or local variables of
    // the constructor.
    // This effectively means that entities from outer scopes by the same name as a constructor
    // parameter or local variable are inaccessible in initializer expressions for instance member
    // variables.
    
    var x = 1;
    struct C {
        b = x; // error, evaluated in scope of constructor, cannot reference x
            ~
!!! error TS2301: Initializer of instance member variable 'b' cannot reference identifier 'x' declared in the constructor.
        constructor(x: string) {
            x = 2; // error, x is string
            ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
        }    
    }
    
    var y = 1;
    struct D {
        b = y; // error, evaluated in scope of constructor, cannot reference y
            ~
!!! error TS2301: Initializer of instance member variable 'b' cannot reference identifier 'y' declared in the constructor.
        constructor(x: string) {
            var y = "";
        }
    }